<resources>
    <string name="app_name">SkućiSe</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="gradovi">

        <item> Ada</item>
        <item>  Aleksandrovac</item>
        <item>  Aleksinac</item>
        <item>  Alibunar</item>
        <item>  Apatin</item>
        <item>  Aradac</item>
        <item>  Aranđelovac</item>
        <item>  Arilje</item>
        <item>  Babušnica</item>
        <item> Bajina Bašta</item>
        <item>  Barajevo</item>
        <item>  Batajnica</item>
        <item>  Batočina</item>
        <item>  Bač</item>
        <item>  Bašaid</item>
        <item>  Beograd</item>
        <item>  Beočin</item>
        <item>  Bečej</item>
        <item>  Blace</item>
        <item>  Bogatić</item>
        <item>  Bojnik</item>
        <item>  Boljevac</item>
        <item>  Bor</item>
        <item>  Bosilegrad</item>
        <item>  Brus</item>
        <item>  Bujanovac</item>
        <item>  Crkva</item>
        <item>  Crniće</item>
        <item>  Crnja</item>
        <item>  Debeljača</item>
        <item>  Deliblato</item>
        <item>  Despotovac</item>
        <item>  Dimitrovgrad</item>
        <item>  Doljevac</item>
        <item>  Elemir</item>
        <item>  Ečka</item>
        <item>  Gradište</item>
        <item>  Grocka</item>
        <item>  Han</item>
        <item>  Horgoš</item>
        <item>  Inđija</item>
        <item>  Irig</item>
        <item>  Ivanjica</item>
        <item>  Iđoš</item>
        <item>  Jagodina</item>
        <item>  Kamenica</item>
        <item>  Kanjiža</item>
        <item>  Karlovac</item>
        <item>  Karlovci</item>
        <item>  Kikinda</item>
        <item>  Kladovo</item>
        <item>  Klek</item>
        <item>  Kneževac</item>
        <item>  Knić</item>
        <item>  Knjaževac</item>
        <item>  Koceljeva</item>
        <item>  Kosjerić</item>
        <item>  Kostolac</item>
        <item>  Kovačica</item>
        <item>  Kovin</item>
        <item>  Kragujevac</item>
        <item>  Kraljevo</item>
        <item>  Krupanj</item>
        <item>  Kruševac</item>
        <item>  Kula</item>
        <item>  Kuršumlija</item>
        <item>  Kučevo</item>
        <item>  Lajkovac</item>
        <item>  Lapovo</item>
        <item>  Lazarevac</item>
        <item>  Lazarevo</item>
        <item>  Lebane</item>
        <item>  Leskovac</item>
        <item>  Ljig</item>
        <item>  Ljubovija</item>
        <item>  Loznica</item>
        <item>  Lučani</item>
        <item>  Majdanpek</item>
        <item>  Markovac</item>
        <item>  Medveđa</item>
        <item>  Melenci</item>
        <item>  Merošina</item>
        <item>  Milanovac</item>
        <item>  Mionica</item>
        <item>  Mitrovica</item>
        <item>  Mladenovac</item>
        <item>  Moravica</item>
        <item>  Negotin</item>
        <item>  Niš</item>
        <item>  Niška Banja</item>
        <item>  Novi Sad</item>
        <item>  Obrenovac</item>
        <item>  Odžaci</item>
        <item>  Opovo</item>
        <item>  Osečina</item>
        <item>  Padej</item>
        <item>  Pančevo</item>
        <item>  Paraćin</item>
        <item>  Pazar</item>
        <item>  Pazova</item>
        <item>  Perlez</item>
        <item>  Petrovac na Mlavi</item>
        <item>  Petrovaradin</item>
        <item>  Pećinci</item>
        <item>  Pirot</item>
        <item>  Plandište</item>
        <item>  Požarevac</item>
        <item>  Požega</item>
        <item>  Preševo</item>
        <item>  Priboj</item>
        <item>  Prijepolje</item>
        <item>  Prokuplje</item>
        <item>  Rača</item>
        <item>  Raška</item>
        <item>  Ražanj</item>
        <item>  Rekovac</item>
        <item>  Ruma</item>
        <item>  Senta</item>
        <item>  Sečanj</item>
        <item>  Sjenica</item>
        <item>  Slankamen</item>
        <item>  Smederevo</item>
        <item>  Smederevska Palanka</item>
        <item>  Sokobanja</item>
        <item>  Sombor</item>
        <item>  Sopot</item>
        <item>  Srbobran</item>
        <item> Sremska Mitrovica </item>
        <item>  Sremski Karlovci</item>
        <item>  Stara</item>
        <item>  Subotica</item>
        <item>  Surdulica</item>
        <item>  Surčin</item>
        <item>  Svilajnac</item>
        <item>  Svrljig</item>
        <item>  Temerin</item>
        <item>  Titel</item>
        <item>  Topola</item>
        <item>  Trava</item>
        <item>  Trgovište</item>
        <item>  Trstenik</item>
        <item>  Tutin</item>
        <item>  Ub</item>
        <item>  Užice</item>
        <item>  Valjevo</item>
        <item>  Varoš</item>
        <item>  Varvarin</item>
        <item> Velika Plana  </item>
        <item>  Veliko Polje </item>
        <item>  Vladimirci</item>
        <item>  Vladimirovac</item>
        <item>  Vladičin Han </item>
        <item>  Vlasotince</item>
        <item>  Vranje</item>
        <item>  Vrbas</item>
        <item>  Vreoci</item>
        <item>  Vrnjačka Banja </item>
        <item>  Vršac</item>
        <item>  Zaječar</item>
        <item>  Zemun</item>
        <item>  Zrenjanin</item>
        <item>  Zvornik</item>
        <item>  Ćićevac</item>
        <item>  Ćuprija</item>
        <item>  Čajetina</item>
        <item>  Čačak</item>
        <item>  Čenta</item>
        <item>  Čoka</item>
        <item>  Šabac</item>
        <item>  Šid</item>
        <item>  Žabalj</item>
        <item>  Žabari</item>
        <item>  Žagubica</item>
        <item>  Žednik</item>
        <item>  Žitište</item>
        <item>  Žitorađa</item>
    </string-array>
    <string-array name="filter_gradovi">

        <item>Izaberi grad</item>
        <item> Ada</item>
        <item>  Aleksandrovac</item>
        <item>  Aleksinac</item>
        <item>  Alibunar</item>
        <item>  Apatin</item>
        <item>  Aradac</item>
        <item>  Aranđelovac</item>
        <item>  Arilje</item>
        <item>  Babušnica</item>
        <item> Bajina Bašta</item>
        <item>  Barajevo</item>
        <item>  Batajnica</item>
        <item>  Batočina</item>
        <item>  Bač</item>
        <item>  Bašaid</item>
        <item>  Beograd</item>
        <item>  Beočin</item>
        <item>  Bečej</item>
        <item>  Blace</item>
        <item>  Bogatić</item>
        <item>  Bojnik</item>
        <item>  Boljevac</item>
        <item>  Bor</item>
        <item>  Bosilegrad</item>
        <item>  Brus</item>
        <item>  Bujanovac</item>
        <item>  Crkva</item>
        <item>  Crniće</item>
        <item>  Crnja</item>
        <item>  Debeljača</item>
        <item>  Deliblato</item>
        <item>  Despotovac</item>
        <item>  Dimitrovgrad</item>
        <item>  Doljevac</item>
        <item>  Elemir</item>
        <item>  Ečka</item>
        <item>  Gradište</item>
        <item>  Grocka</item>
        <item>  Han</item>
        <item>  Horgoš</item>
        <item>  Inđija</item>
        <item>  Irig</item>
        <item>  Ivanjica</item>
        <item>  Iđoš</item>
        <item>  Jagodina</item>
        <item>  Kamenica</item>
        <item>  Kanjiža</item>
        <item>  Karlovac</item>
        <item>  Karlovci</item>
        <item>  Kikinda</item>
        <item>  Kladovo</item>
        <item>  Klek</item>
        <item>  Kneževac</item>
        <item>  Knić</item>
        <item>  Knjaževac</item>
        <item>  Koceljeva</item>
        <item>  Kosjerić</item>
        <item>  Kostolac</item>
        <item>  Kovačica</item>
        <item>  Kovin</item>
        <item>  Kragujevac</item>
        <item>  Kraljevo</item>
        <item>  Krupanj</item>
        <item>  Kruševac</item>
        <item>  Kula</item>
        <item>  Kuršumlija</item>
        <item>  Kučevo</item>
        <item>  Lajkovac</item>
        <item>  Lapovo</item>
        <item>  Lazarevac</item>
        <item>  Lazarevo</item>
        <item>  Lebane</item>
        <item>  Leskovac</item>
        <item>  Ljig</item>
        <item>  Ljubovija</item>
        <item>  Loznica</item>
        <item>  Lučani</item>
        <item>  Majdanpek</item>
        <item>  Markovac</item>
        <item>  Medveđa</item>
        <item>  Melenci</item>
        <item>  Merošina</item>
        <item>  Milanovac</item>
        <item>  Mionica</item>
        <item>  Mitrovica</item>
        <item>  Mladenovac</item>
        <item>  Moravica</item>
        <item>  Negotin</item>
        <item>  Niš</item>
        <item>  Niška Banja</item>
        <item>  Novi Sad</item>
        <item>  Obrenovac</item>
        <item>  Odžaci</item>
        <item>  Opovo</item>
        <item>  Osečina</item>
        <item>  Padej</item>
        <item>  Pančevo</item>
        <item>  Paraćin</item>
        <item>  Pazar</item>
        <item>  Pazova</item>
        <item>  Perlez</item>
        <item>  Petrovac na Mlavi</item>
        <item>  Petrovaradin</item>
        <item>  Pećinci</item>
        <item>  Pirot</item>
        <item>  Plandište</item>
        <item>  Požarevac</item>
        <item>  Požega</item>
        <item>  Preševo</item>
        <item>  Priboj</item>
        <item>  Prijepolje</item>
        <item>  Prokuplje</item>
        <item>  Rača</item>
        <item>  Raška</item>
        <item>  Ražanj</item>
        <item>  Rekovac</item>
        <item>  Ruma</item>
        <item>  Senta</item>
        <item>  Sečanj</item>
        <item>  Sjenica</item>
        <item>  Slankamen</item>
        <item>  Smederevo</item>
        <item>  Smederevska Palanka</item>
        <item>  Sokobanja</item>
        <item>  Sombor</item>
        <item>  Sopot</item>
        <item>  Srbobran</item>
        <item> Sremska Mitrovica </item>
        <item>  Sremski Karlovci</item>
        <item>  Stara</item>
        <item>  Subotica</item>
        <item>  Surdulica</item>
        <item>  Surčin</item>
        <item>  Svilajnac</item>
        <item>  Svrljig</item>
        <item>  Temerin</item>
        <item>  Titel</item>
        <item>  Topola</item>
        <item>  Trava</item>
        <item>  Trgovište</item>
        <item>  Trstenik</item>
        <item>  Tutin</item>
        <item>  Ub</item>
        <item>  Užice</item>
        <item>  Valjevo</item>
        <item>  Varoš</item>
        <item>  Varvarin</item>
        <item> Velika Plana  </item>
        <item>  Veliko Polje </item>
        <item>  Vladimirci</item>
        <item>  Vladimirovac</item>
        <item>  Vladičin Han </item>
        <item>  Vlasotince</item>
        <item>  Vranje</item>
        <item>  Vrbas</item>
        <item>  Vreoci</item>
        <item>  Vrnjačka Banja </item>
        <item>  Vršac</item>
        <item>  Zaječar</item>
        <item>  Zemun</item>
        <item>  Zrenjanin</item>
        <item>  Zvornik</item>
        <item>  Ćićevac</item>
        <item>  Ćuprija</item>
        <item>  Čajetina</item>
        <item>  Čačak</item>
        <item>  Čenta</item>
        <item>  Čoka</item>
        <item>  Šabac</item>
        <item>  Šid</item>
        <item>  Žabalj</item>
        <item>  Žabari</item>
        <item>  Žagubica</item>
        <item>  Žednik</item>
        <item>  Žitište</item>
        <item>  Žitorađa</item>
    </string-array>
    <string name="zahtev_za_pregled_oglasa_of_korisnika_korisnik">Zahtev za pregled oglasa of korisnika #korisnik</string>
    <string name="naslov_oglasa">Naslov oglasa</string>
    <string name="opis_oglasa">Opis oglasa</string>
    <string name="accept">✓</string>
    <string name="decline">✗</string>
</resources>