<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="2dp"
    app:cardPreventCornerOverlap="false"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notifikacija_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="#f7f7f7"
        >

        <LinearLayout
            android:id="@+id/nl_ponudjac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            >

            <TextView
                android:id="@+id/nl_ponudjac_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/zahtev_za_pregled_oglasa_of_korisnika_korisnik"
                android:textColor="#000"
                android:textSize="13sp"
                />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/nl_oglas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nl_ponudjac"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/nl_naslov_oglasa"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/naslov_oglasa"
                android:textColor="#000"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/nl_opis_oglasa"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="3"
                android:text="@string/opis_oglasa"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/nl_oglas"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <Button
                android:id="@+id/nl_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:text="@string/accept"
                android:backgroundTint="#32CD32"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/nl_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:text="@string/decline"
                android:backgroundTint="#DC143C"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
